src/objects/QAObj4__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MasterField1__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QAObj4s (Account)</relationshipLabel>
        <relationshipName>QAObj4s1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lookupField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QAObj4s</relationshipLabel>
        <relationshipName>QAObj4s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QAObj4</label>
    <nameField>
        <label>QAObj4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAObj4s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>